# tree-sitter-glsl

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  Package.resolved  Package.swift  README.md  binding.gyp  generate-highlight.sh  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  update-cpp-parser.yml
bindings/c/: tree-sitter-glsl.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_import.py
bindings/python/tree_sitter_glsl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGlsl/: glsl.h
bindings/swift/TreeSitterGlslTests/: TreeSitterGlslTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
