[package]
name = "tree-sitter-glsl"
description = "GLSL grammar for the tree-sitter parsing library"
version = "0.1.2"
keywords = ["incremental", "parsing", "glsl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/theHamsta/tree-sitter-glsl"
edition = "2018"
license = "MIT"
authors = ["tree-sitter-c authors around Max Brunsfeld", "Stephan Seitz"]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.0"

[build-dependencies]
cc = "1.0"
