[package]
name = "tree-sitter-glsl"
description = "GLSL grammar for the tree-sitter parsing library"
version = "0.2.0"
keywords = ["incremental", "parsing", "glsl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/theHamsta/tree-sitter-glsl"
edition = "2024"
license = "MIT"
authors = ["tree-sitter-c authors around Max Brunsfeld", "Stephan Seitz"]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.25.3"

[build-dependencies]
cc = "1.0.83"
